background image was not showing

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <!-- =============== HERO ============== -->
 
 
-        <section class="section has-bg-image" aria-label="home" style="background-image: url('/images/hero-2.png');">
+        <section class="section has-bg-image" aria-label="home" style="background-image: url('images/hero-2.png');">
 
             <!-- <div class="home-top-mobile-page" style="background-image: url('images/hero-mobile-phone.png');"> -->
 
